// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users test should switch to selected lesson in AdminLessonsSidebar 1`] = `
<div>
  <nav
    class="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand text-primary font-weight-bold"
        href="/"
      >
        C0D3
      </a>
      <div
        id="navbarNav"
      >
        <div
          class="navbar-nav collapse navbar-collapse"
        >
          <div
            class="navbar-nav collapse navbar-collapse"
          >
            <a
              class="nav-item nav-link"
              href="/curriculum"
            >
              Curriculum
            </a>
            <a
              class="nav-item nav-link"
              href="https://github.com/garageScript/c0d3-app"
              rel="noopener noreferrer"
              target="_blank"
            >
              Repo
            </a>
            <a
              class="nav-item nav-link"
              href="/docs/learn"
            >
              Learn
            </a>
            <a
              class="nav-item nav-link"
              href="https://discord.gg/c0d3"
              rel="noopener noreferrer"
              target="_blank"
            >
              Community
            </a>
            <div
              class="dropdown"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-none"
                type="button"
              >
                Admin
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="d-flex"
      >
        <a
          class="btn btn-secondary border overflow-hidden p-2 text-truncate"
          href="/profile/fakeusername"
        >
           fakeusername
        </a>
        <button
          class="btn border ml-2"
          style="color: rgb(41, 41, 41);"
        >
          Logout
        </button>
      </div>
    </div>
  </nav>
  <div
    class="container-md"
  >
    <div
      class="row mt-4"
    >
      <div
        class="col-4 mt-4 "
      >
        <div
          aria-orientation="vertical"
          class="nav flex-column nav-pills"
          role="tablist"
        >
          <a
            class="nav-link active"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            Foundations of JavaScript
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            Variables & Functions
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            Arrays
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            Objects
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            Front End Engineering
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            End To End
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            React, GraphQL, SocketIO
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            JavaScript Algorithms
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            Trees
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            General Algorithms
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            Create New Lesson
          </a>
        </div>
      </div>
      <div
        class="col-8 text-center"
      >
        <span
          class="text-primary font-weight-bold display-3"
        >
          Lesson Info
        </span>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Foundations of JavaScript
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Foundations of JavaScript"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      A super simple introduction to help you get started!
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5docUrl3"
                  >
                    Docurl
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="https://www.notion.so/garagescript/JS-0-Foundations-a43ca620e54945b2b620bcda5f3cf672"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5githubUrl4"
                  >
                    Githuburl
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input4"
                    placeholder=""
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5videoUrl5"
                  >
                    Videourl
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input5"
                    placeholder=""
                    type="text"
                    value="https://www.youtube.com/watch?v=H-eqRQo8KoI&list=PLKmS5c0UNZmewGBWlz0l9GZwh3bV8Rlc7&index=1"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order6"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input6"
                    placeholder=""
                    type="text"
                    value="0"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5chatUrl7"
                  >
                    Chaturl
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input7"
                    placeholder=""
                    type="text"
                    value="https://chat.c0d3.com/c0d3/channels/js1-variablesfunction"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Lesson
                </button>
              </div>
            </div>
          </div>
        </div>
        <hr />
        <div
          class="mb-2"
        >
          <div
            class="mb-3 text-center"
          >
            <span
              class="text-primary font-weight-bold display-3"
            >
              Create New Challenge
            </span>
          </div>
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              />
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title0"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input0"
                    placeholder=""
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description1"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    />
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order2"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input2"
                    placeholder=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Create Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <hr />
        <span
          class="text-primary font-weight-bold display-3"
        >
          Lesson Challenges
        </span>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Sum of 2 Numbers
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Sum of 2 Numbers"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Write a function that takes in 2 numbers and returns their sum.

Here's how another developer might use your function:

\`\`\`
solution(5,9) // Should return 14
solution(4,1) // Should return 5
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="1"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Sum of 3 Numbers
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Sum of 3 Numbers"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Write a function that takes in 3 numbers and returns their sum.

Here's how another developer might use your function:

\`\`\`
solution(5,9,2) // Should return 16
solution(4,1,9) // Should return 14
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="2"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Greater than 5
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Greater than 5"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Write a function that takes in a number and returns true if that number is greater than 5. Otherwise, return false.

Here's how another developer might use your function:

\`\`\`
solution(9) // Should return true
solution(4) // Should return false
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="3"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Biggest Num out of 2
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Biggest Num out of 2"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Write a function that takes in 2 numbers and return the largest out of them.

Here's how another developer might use your function:

\`\`\`
solution(5,9) // Should return 9
solution(4,1) // Should return 4
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="4"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Biggest Num Out of 3
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Biggest Num Out of 3"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Write a function that takes in 3 numbers and return the largest out of them.


Here's how another developer might use your function:

\`\`\`
solution(5,9,14) // Should return 14
solution(4,5,1) // Should return 5
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="5"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Is First Num Bigger
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Is First Num Bigger"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Write a function that takes in 2 numbers and returns true if the first number is greater than the second, false otherwise.

Here's how another developer might use your function:

\`\`\`
solution(5,9) // Should return false
solution(4,1) // Should return true
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="6"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Is Sum &gt; 10
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Is Sum > 10"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Write a function that takes in 2 numbers and returns true if their sum is greater than 10.

Here's how another developer might use your function:

\`\`\`
solution(5,9) // Should return true
solution(4,1) // Should return false
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="7"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Functional Sum
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Functional Sum"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Takes in 2 numbers, return a function that returns the sum when the function is called 

Example:

\`\`\`
const a = solution(5,6) // a is a function, and a() will return 11
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="8"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Functional 3 Sum
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Functional 3 Sum"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Write a function that takes in 2 numbers, return a function that takes in a number that returns the sum of all 3 numbers when called. 
Example:

\`\`\` 
const a = solution(1,2); // a is a function
// a(1) returns 4 because 1+2+1
// a(5) returns 8 because 1 + 2 + 5 
// a(2) returns 5 because 1 + 2 + 2
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="9"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Functional Sums
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Functional Sums"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Write a function that takes in 2 functions and returns the sum of the result of the 2 functions
Example:

\`\`\`
const a = () =&gt; {  return 5; }
const b = () =&gt; {  return 6; }
const c = solution(a, b) // c should be 11 because a() + b()
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="10"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <footer
    class="mt-5 font-weight-light text-center pb-5 text-muted"
  >
    © Copyright 2021 GarageScript
  </footer>
</div>
`;

exports[`Users test should switch to selected lesson in AdminLessonsSidebar 2`] = `
<div>
  <nav
    class="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand text-primary font-weight-bold"
        href="/"
      >
        C0D3
      </a>
      <div
        id="navbarNav"
      >
        <div
          class="navbar-nav collapse navbar-collapse"
        >
          <div
            class="navbar-nav collapse navbar-collapse"
          >
            <a
              class="nav-item nav-link"
              href="/curriculum"
            >
              Curriculum
            </a>
            <a
              class="nav-item nav-link"
              href="https://github.com/garageScript/c0d3-app"
              rel="noopener noreferrer"
              target="_blank"
            >
              Repo
            </a>
            <a
              class="nav-item nav-link"
              href="/docs/learn"
            >
              Learn
            </a>
            <a
              class="nav-item nav-link"
              href="https://discord.gg/c0d3"
              rel="noopener noreferrer"
              target="_blank"
            >
              Community
            </a>
            <div
              class="dropdown"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-none"
                type="button"
              >
                Admin
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="d-flex"
      >
        <a
          class="btn btn-secondary border overflow-hidden p-2 text-truncate"
          href="/profile/fakeusername"
        >
           fakeusername
        </a>
        <button
          class="btn border ml-2"
          style="color: rgb(41, 41, 41);"
        >
          Logout
        </button>
      </div>
    </div>
  </nav>
  <div
    class="container-md"
  >
    <div
      class="row mt-4"
    >
      <div
        class="col-4 mt-4 "
      >
        <div
          aria-orientation="vertical"
          class="nav flex-column nav-pills"
          role="tablist"
        >
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            Foundations of JavaScript
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            Variables & Functions
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            Arrays
          </a>
          <a
            class="nav-link active"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            Objects
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            Front End Engineering
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            End To End
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            React, GraphQL, SocketIO
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            JavaScript Algorithms
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            Trees
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            General Algorithms
          </a>
          <a
            class="nav-link"
            data-testid="challenge-title"
            data-toggle="pill"
            role="tab"
            style="word-break: break-word; cursor: pointer;"
          >
            Create New Lesson
          </a>
        </div>
      </div>
      <div
        class="col-8 text-center"
      >
        <span
          class="text-primary font-weight-bold display-3"
        >
          Lesson Info
        </span>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Objects
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Objects"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      These exercises will test your understanding of objects, which includes linked lists and trees
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5docUrl3"
                  >
                    Docurl
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="https://www.notion.so/garagescript/JS-3-Objects-3df846eaf0404fe6b012208773063a04"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5githubUrl4"
                  >
                    Githuburl
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input4"
                    placeholder=""
                    type="text"
                    value="https://github.com/garageScript/curriculum/tree/master/curriculum/js3"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5videoUrl5"
                  >
                    Videourl
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input5"
                    placeholder=""
                    type="text"
                    value="https://www.youtube.com/watch?v=Npn275pNXYw&index=4&list=PLKmS5c0UNZmewGBWlz0l9GZwh3bV8Rlc7"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order6"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input6"
                    placeholder=""
                    type="text"
                    value="3"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5chatUrl7"
                  >
                    Chaturl
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input7"
                    placeholder=""
                    type="text"
                    value="https://chat.c0d3.com/c0d3/channels/js5-htmlcssjs"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Lesson
                </button>
              </div>
            </div>
          </div>
        </div>
        <hr />
        <div
          class="mb-2"
        >
          <div
            class="mb-3 text-center"
          >
            <span
              class="text-primary font-weight-bold display-3"
            >
              Create New Challenge
            </span>
          </div>
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              />
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title0"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input0"
                    placeholder=""
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description1"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    />
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order2"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input2"
                    placeholder=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Create Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <hr />
        <span
          class="text-primary font-weight-bold display-3"
        >
          Lesson Challenges
        </span>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Return array of values
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Return array of values"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Given an array of strings (keys) and object, return a new array of values using the given array elements as keys to access the given object. 

\`\`\`
solution(['123', 'abc'], {123: 'hi', 345: 'world', abc: 'world'});
// will return ['hi', 'world']
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="1"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Create 2d Array of Objects
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Create 2d Array of Objects"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Given 2 integers, create 2d arrays of objects. First integer represents the amount of nested arrays, 2nd integer represents the amount of objects within each nested array.

\`\`\`
solution(3,2)
// will return the following:
[
    [{x: 0, y:0}, {x:1, y: 0}],
    [{x: 0, y: 1}, {x:1, y: 1}],
    [{x: 0, y: 2}, {x:1, y: 2}],
]

solution(99,2)
// will return the following:
[
    [{x: 0, y:0}, {x:1, y: 0}],
    [{x: 0, y: 1}, {x:1, y: 1}],
    [{x: 0, y: 2}, {x:1, y: 2}],
    ...
    [{x: 0, y: 98}, {x:1, y: 98}],
]
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="2"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Return function from array of strings
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Return function from array of strings"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Write a function called solution that takes in an array of strings and returns a function.

returned function will return an object with only keys that exist in the input array.

\`\`\`
const resp = solution(['apollo', 'bella', 'cinderella'])
console.log(resp({'apple': 25, 'apollo': 45, 'cindy': 84}))
// will console.log this object: {"apollo": 45}

console.log(resp({orange: 80, 'apollo': 95}))
// will console.log this object: {'apollo': 95}

console.log(resp({iron: 'man', billy: 'joel'}))
// will console.log this object: {}
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="3"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  2 sum
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="2 sum"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Write a function that takes in an array of numbers and a number, and returns true if any pairs add up to the number. (The numbers in the array is not unique, meaning there may be duplicate numbers)

\`\`\`
solution([1,2,22,333,23], 25)   // returns true
solution([1,2,22,333,23], 24)   // returns true
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="4"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Function call between Objects
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Function call between Objects"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Given object of key-string values and an object of key - function values, call the functions in 2nd object (if possible) using the values in 1st object as function params. Return new object.

\`\`\`javascript
solution ({
   "name": "drake",
   "age": "33",
   "power": 'finessing',
   "color": "platinum"
}, {
   "name": (e) =&gt; { return e + "kendrick" },
   "power": (e) =&gt; { return "motivating" + e }
});

// will return : 
   {
      "name": "drakekendrick",
      "age": "33",
      "power": "motivatingfinessing",
      "color": "platinum"
   }
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="5"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Duplicate Numbers
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Duplicate Numbers"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Write a function that takes in an array of numbers, and returns a new array of all duplicate numbers.

\`\`\`
solution([1, 2, 2, 3, 1])  // should return [1, 2]
solution([1, 1, 1, 1, 2, 3, 3])  // should return [1, 3]
\`\`\`

                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="6"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Map Objects
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Map Objects"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Write a map function for objects

\`\`\`
const info = {
   ironman: 'arrogant',
   spiderman: 'naive',
   hulk: 'strong',
}
const result = info.map( (key, value, i) =&gt; {
   return key + i + value
})
console.log(result)

// will print out ['ironman0arrogant', 'spiderman1naive', 'hulk2strong']
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="7"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Call function values of an Object
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Call function values of an Object"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Write a function that takes in an object and a number (milli-seconds). 

   * you must call each function value of the object: 
     * Given an object: \`{"nVal": (k) =&gt; {...}}\`
     * \`{"nVal": (k) =&gt; {...When this function runs, k is "nVal"...}}\`

\`\`\`
const a = {
   "jayZ": (key) =&gt; console.log(key),
   "tupac": (key) =&gt; console.log(key + 2),
   "name3": (key) =&gt; console.log(key === "name3"),
   "level": (key) =&gt; console.log(key + key + key)
}
solution(a, 500)

// should print out: 
"jayZ"
... 500 millieseconds later...
"tupac2"
...500 millieseconds later...
"true"
...500 millieseconds later...
levellevellevel
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="8"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Send a request
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Send a request"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Create a JavaScript file \`9.js\` so that when you run it with \`node 9.js\`, the computer will output an HTML file \`9.html\` that has displays each pokemon's name and image. There cannot be any JavaScript in the generated html file. 

1. Send a request to [https://pokeapi.co/api/v2/pokemon/](https://pokeapi.co/api/v2/pokemon/). 
2. Look at the response, you will notice that each pokemon has a url. You need to send another request for each pokemon to get the image url. It is located under \`sprites\` key of the object.
3. Use the responses to create an HTML string to display the name and pokemon's image. 
4. Write the resulting string into a file using \`fs.writeFile\` 

The \`img\` tag with the \`src\` attribute are instructions for the browser to get the image data from the url and display it. Put this tag into an html file to display a picture of a cat. 

Example: Put this tag into an html file to display a picture of the cat.
\`\`\`
&lt; img src="https://placekitten.com/g/200/300" /&gt;
\`\`\`
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="9"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3"
        >
          <div
            class="row"
          >
            <div
              class="card shadow-sm col-12"
            >
              <div
                class="card-body text-center"
              >
                <h2
                  class="card-title font-weight-bold mb-3"
                >
                  Build this Pokemon Viewer
                </h2>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5title1"
                  >
                    Title
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input1"
                    placeholder=""
                    type="text"
                    value="Build this Pokemon Viewer"
                  />
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5description2"
                  >
                    Description
                  </h5>
                  <div
                    style="background-color: white;"
                  >
                    <button
                      class="btn"
                      style="color: rgb(41, 41, 41);"
                    >
                      Write
                    </button>
                    <button
                      class="btn"
                      style="color: rgb(142, 142, 142);"
                    >
                      Preview
                    </button>
                    <textarea
                      data-testid="textbox"
                      placeholder="Type something..."
                      style="padding: 1rem; width: 100%;"
                    >
                      Send a request to https://pokeapi.co/api/v2/pokemon/ and create [a Pokemon Viewer](https://songz.c0d3.com/js3/pokeview.html) . Have the viewer include previous and next buttons at the top of the page, and display 20 images and names of pokemon per page. 
                    </textarea>
                  </div>
                </div>
                <div
                  class="d-flex flex-column ml-3 mr-3 mb-4"
                >
                  <h5
                    data-testid="h5order3"
                  >
                    Order
                  </h5>
                  <input
                    class="form-control"
                    data-testid="input3"
                    placeholder=""
                    type="text"
                    value="10"
                  />
                </div>
              </div>
              <div
                class="text-center mb-4"
              >
                <button
                  class="btn bg-primary"
                  style="color: rgb(255, 255, 255);"
                >
                  Update Challenge
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <footer
    class="mt-5 font-weight-light text-center pb-5 text-muted"
  >
    © Copyright 2021 GarageScript
  </footer>
</div>
`;
